backends/drm: fix legacy modesets

There's no pending frame on modesets with legacy, so calling pageFlipped crashes KWin

BUG: 473664